[gd_scene load_steps=5 format=3 uid="uid://bqxvhxqxqxqxr"]

[ext_resource type="Script" uid="uid://dpx40stberga" path="res://algorithms/proceduralgeneration/markov_chains/MarkovChains.gd" id="1_script"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1"]
albedo_color = Color(0.2, 0.2, 0.2, 1)
metallic = 0.8
roughness = 0.2

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_2"]
albedo_color = Color(0.2, 0.8, 0.2, 1)
emission_enabled = true
emission = Color(0.2, 0.8, 0.2, 1)
emission_energy_multiplier = 0.3

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_3"]
albedo_color = Color(0.8, 0.2, 0.2, 1)
emission_enabled = true
emission = Color(0.8, 0.2, 0.2, 1)
emission_energy_multiplier = 0.3

[node name="MarkovChains" type="Node3D"]
script = ExtResource("1_script")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 15, 15)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.707107, -0.5, 0.5, 0, 0.707107, 0.707107, -0.707107, -0.5, 0.5, 0, 20, 0)
light_energy = 1.5

[node name="StateSpace" type="Node3D" parent="."]

[node name="States" type="Node3D" parent="StateSpace"]

[node name="Transitions" type="Node3D" parent="StateSpace"]

[node name="CurrentState" type="Node3D" parent="StateSpace"]

[node name="StateLabel" type="CSGBox3D" parent="StateSpace"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 8, 0)
material_override = SubResource("StandardMaterial3D_1")
size = Vector3(4, 0.3, 0.3)

[node name="GenerationEngine" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8, 0, 0)
visible = false

[node name="EngineCore" type="CSGBox3D" parent="GenerationEngine"]
material_override = SubResource("StandardMaterial3D_2")
size = Vector3(3, 3, 3)

[node name="EngineLabel" type="CSGBox3D" parent="GenerationEngine"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)
material_override = SubResource("StandardMaterial3D_1")
size = Vector3(3, 0.3, 0.3)

[node name="ChainMethods" type="Node3D" parent="GenerationEngine"]

[node name="TextGenerationCore" type="CSGSphere3D" parent="GenerationEngine/ChainMethods"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.5, 0, 0)
material_override = SubResource("StandardMaterial3D_3")

[node name="MusicGenerationCore" type="CSGSphere3D" parent="GenerationEngine/ChainMethods"]
material_override = SubResource("StandardMaterial3D_3")

[node name="PatternGenerationCore" type="CSGSphere3D" parent="GenerationEngine/ChainMethods"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.5, 0, 0)
material_override = SubResource("StandardMaterial3D_3")

[node name="ProbabilityMatrix" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8, 0, 0)
visible = false

[node name="MatrixCore" type="CSGBox3D" parent="ProbabilityMatrix"]
material_override = SubResource("StandardMaterial3D_2")
size = Vector3(3, 3, 3)

[node name="MatrixLabel" type="CSGBox3D" parent="ProbabilityMatrix"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)
material_override = SubResource("StandardMaterial3D_1")
size = Vector3(3, 0.3, 0.3)

[node name="ProbabilityValues" type="Node3D" parent="ProbabilityMatrix"]

[node name="GeneratedSequence" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -4, 0)
visible = false

[node name="SequenceCore" type="CSGBox3D" parent="GeneratedSequence"]
material_override = SubResource("StandardMaterial3D_2")
size = Vector3(8, 0.5, 2)

[node name="SequenceLabel" type="CSGBox3D" parent="GeneratedSequence"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.5, 0)
material_override = SubResource("StandardMaterial3D_1")
size = Vector3(4, 0.3, 0.3)

[node name="SequenceElements" type="Node3D" parent="GeneratedSequence"]

[node name="MarkovMetrics" type="Node3D" parent="."]
visible = false

[node name="EntropyMeter" type="Node3D" parent="MarkovMetrics"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6, 8, 0)

[node name="EntropyBase" type="CSGBox3D" parent="MarkovMetrics/EntropyMeter"]
material_override = SubResource("StandardMaterial3D_1")
size = Vector3(4, 0.2, 1)

[node name="EntropyIndicator" type="CSGSphere3D" parent="MarkovMetrics/EntropyMeter"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3, 0)
material_override = SubResource("StandardMaterial3D_2")
radius = 0.3

[node name="ConvergenceMeter" type="Node3D" parent="MarkovMetrics"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 8, 0)

[node name="ConvergenceBase" type="CSGBox3D" parent="MarkovMetrics/ConvergenceMeter"]
material_override = SubResource("StandardMaterial3D_1")
size = Vector3(4, 0.2, 1)

[node name="ConvergenceIndicator" type="CSGSphere3D" parent="MarkovMetrics/ConvergenceMeter"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3, 0)
material_override = SubResource("StandardMaterial3D_2")
radius = 0.3

[node name="Grid" type="Node3D" parent="."]
visible = false

[node name="GridLines" type="Node3D" parent="Grid"]
